plugin: fix onTabComplete broken return + remove dead VERIFY_FALLBACK_PATH (BUG-1, DESIGN-1)